--- a/automotive/build.gradle
+++ b/automotive/build.gradle
@@ -3,12 +3,15 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
+
 android {
     compileSdk 32
 
     defaultConfig {
         applicationId "com.apap.automotiveplayground"
-        minSdk 28
+        minSdk 29
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -22,12 +25,40 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+    
+    viewBinding {
+        enabled = true
+    }
+
+    useLibrary 'android.car'
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
+
+    implementation "com.google.dagger:hilt-android:2.40.5"
+    kapt "com.google.dagger:hilt-compiler:2.40.5"
+
+    implementation "androidx.car.app:app:1.1.0"
+
+    // Android Auto
+    //implementation "androidx.car.app:app-projected:1.1.0"
+    // Android Automotive
+    implementation "androidx.car.app:app-automotive:1.1.0"
+    testImplementation "androidx.car.app:app-testing:1.3.0-beta01"
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
