--- a/automotive/src/main/AndroidManifest.xml
+++ b/automotive/src/main/AndroidManifest.xml
@@ -5,25 +5,73 @@
     <uses-feature
         android:name="android.hardware.type.automotive"
         android:required="true" />
+    <uses-feature
+        android:name="android.software.car.templates_host"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.wifi"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.screen.portrait"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.screen.landscape"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
-        android:appCategory="audio"
+        android:appCategory="maps"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat">
+        android:supportsRtl="true">
 
-        <activity android:name=".MainActivity"
-            android:label="Playground"
-            android:exported="true">
+        <activity
+            android:exported="true"
+            android:theme="@android:style/Theme.DeviceDefault.NoActionBar"
+            android:name="androidx.car.app.activity.CarAppActivity"
+            android:launchMode="singleTask"
+            android:label="Playground">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+                <!-- Additionally include the category below ONLY for navigation apps -->
+<!--                <category android:name="android.intent.category.APP_MAPS" />-->
             </intent-filter>
+
+            <!-- Additionally include the intent-filter below ONLY for navigation apps -->
+<!--            <intent-filter>-->
+<!--                <action android:name="androidx.car.app.action.NAVIGATE" />-->
+<!--                <category android:name="android.intent.category.DEFAULT" />-->
+<!--                <data android:scheme="geo" />-->
+<!--            </intent-filter>-->
+
+            <meta-data android:name="distractionOptimized" android:value="true" />
         </activity>
+
+
+        <service android:name=".service.PlaygroundCarAppService"
+            android:label="Playground"
+            android:icon="@mipmap/ic_launcher"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="androidx.car.app.CarAppService"/>
+                <category android:name="androidx.car.app.category.POI"/>
+            </intent-filter>
+        </service>
+
+        <meta-data
+            android:name="androidx.car.app.minCarApiLevel"
+            android:value="1"/>
+
+        <meta-data android:name="com.android.automotive"
+            android:resource="@xml/automotive_app_desc"/>
+
+
     </application>
 
 </manifest>
